# END_DESIGN_TEST

./: .env.example  .gitignore  README.md  index.html  package.json  phase10_walkthrough.md  vite.config.js  vitest.config.js
agent/: __init__.py  build_export.py  config.py  docstring_generator.py  error_handler.py  file_writer.py  formatter.py  hybrid_router.py  import_resolver.py  llm_coder.py  logger.py  metrics.py  multi_file_handler.py  orchestrator.py  path_resolver.py  prompts.py  python_agent.py  signature_validator.py  state_manager.py  syntax_check.py  task_queue.py  template_coder.py  template_loader.py  test_stub_generator.py  type_hint_generator.py
data/: nextaura-oauth.md
docs/: DAG_FORMAT.md  GENERATION_SUCCESS_CRITERIA.md  INTAKE_SETUP.md
output/: .env.example  Cargo.toml  README.md  package.json  tsconfig.json
src/: main.js
tests/: build-console.test.js  build-ui.test.js  code-preview.test.js  connection-status.test.js  credential-lifetime.test.js  discord-svg.test.js  event-bus.test.js  file-tree.test.js  github-svg.test.js  google-svg.test.js  header.test.js  html-dom-parser.test.js  index-html.test.js  instagram-svg.test.js  main-oauth-handlers.test.js  meta-svg.test.js  navigation.test.js  oauth-callback.test.js  oauth-css.test.js  oauth-endpoints.test.js  oauth-revoke.test.js  oauth.test.js  provider-scopes.test.js  providercard.test.js  providergrid.test.js  scopeselector.test.js  scopestate.test.js  session.test.js  status-sync.test.js  task-status.test.js  test_build_export.py  test_cargo_toml.py  test_circular_dependencies.py  (+38 more)
(+48 files in other folders)
