[package]
name = "nextaura-hybrid-generator"
version = "1.0.0"
edition = "2021"
description = "NextAura Hybrid Code Generator - Tauri Backend"
authors = ["NextAura"]
license = "MIT"
repository = "https://github.com/NextAura/hybrid-generator"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"
tiny_http = "0.12"
keyring = "2.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
url = "2.5"
oauth2 = "4.4"

[dev-dependencies]
mockito = "1.2"
tempfile = "3.9"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "nextaura-app"
path = "src/main.rs"

[lib]
name = "nextaura_lib"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]
